# edgelinkd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.slim  README.md  build.rs  docker-compose.yml  inspiration.md  install.sh  log.toml  rust-red.toml
.cargo/: config.toml
.github/workflows/: CICD.yml  ci.yml  release.yml
.playwright-mcp/: page-2026-05-25T01-36-51-958Z.yml  page-2026-05-25T01-37-06-818Z.yml  page-2026-05-25T01-38-24-597Z.yml  page-2026-05-25T02-17-14-008Z.yml  page-2026-05-26T04-05-11-207Z.yml  page-2026-05-26T04-51-11-488Z.yml  page-2026-05-26T04-51-47-120Z.yml  page-2026-05-26T05-17-00-578Z.yml  page-2026-05-26T05-17-34-688Z.yml  page-2026-05-26T05-22-06-167Z.yml  page-2026-05-26T05-29-37-192Z.yml  page-2026-05-26T05-30-56-021Z.yml  page-2026-05-26T05-47-24-791Z.yml  page-2026-05-26T05-47-43-499Z.yml  page-2026-05-26T05-54-36-399Z.yml  page-2026-05-26T05-55-02-333Z.yml  page-2026-05-26T05-56-43-855Z.yml  page-2026-05-26T05-57-03-589Z.yml  page-2026-05-26T06-31-11-763Z.yml  page-2026-05-26T06-47-46-191Z.yml  page-2026-05-26T10-33-25-761Z.yml  page-2026-05-26T10-33-43-425Z.yml  page-2026-05-26T10-33-58-260Z.yml  page-2026-05-26T13-52-52-553Z.yml  page-2026-05-26T13-52-59-403Z.yml  page-2026-05-26T13-54-57-711Z.yml  page-2026-05-26T13-55-05-438Z.yml  page-2026-05-26T13-55-40-320Z.yml  page-2026-05-26T13-56-06-590Z.yml  page-2026-05-26T13-56-11-650Z.yml  page-2026-05-26T13-57-03-894Z.yml  page-2026-05-26T13-57-17-482Z.yml  page-2026-05-26T13-57-36-747Z.yml  page-2026-05-26T13-58-27-533Z.yml  page-2026-05-26T14-33-27-379Z.yml  page-2026-05-26T14-33-50-682Z.yml  page-2026-05-26T14-34-11-683Z.yml  page-2026-05-26T14-36-30-026Z.yml  page-2026-05-26T14-37-06-774Z.yml  page-2026-05-26T14-37-13-183Z.yml  (+6 more)
benchmarks/: README.md  bench_common.rs  compare.sh  memory.rs  startup.rs  throughput.rs  wasm_overhead.rs
benchmarks/comparison/: README.md  benchmark-report.md  collect-results.sh  run-benchmarks.sh
benchmarks/flows/: chain-10.json  chain-100.json  fan-out.json  simple-passthrough.json  wasm-echo.json
crates/cluster/: Cargo.toml
crates/marketplace/: Cargo.toml
crates/marketplace/src/: api.rs  config.rs  error.rs  lib.rs  models.rs  store.rs  verify.rs
crates/mqtt-broker/: Cargo.toml
crates/mqtt-broker/src/: config.rs  error.rs  lib.rs
crates/mqtt-broker/src/api/: mod.rs  models.rs
crates/mqtt-broker/src/broker/: mod.rs  retained.rs  session.rs  subscription.rs
crates/mqtt-broker/src/persistence/: memory.rs
crates/mqtt-broker/src/protocol/: codec.rs  mod.rs  packets.rs
crates/mqtt-broker/tests/: integration_test.rs
crates/wasm-host/: Cargo.toml
crates/wasm-host/src/: abi.rs  lib.rs  memory.rs  plugin_manager.rs  shim.rs  state.rs  types.rs
crates/web/: Cargo.toml
crates/web/public/: index.html
crates/web/public/red/: mobile.css  mobile.js
crates/web/src/: api.rs  api_tests.rs  health.rs  lib.rs  models.rs  models_dashboard.rs  security.rs  server.rs  versioning.rs
crates/web/src/auth/: config.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  roles.rs  users.rs
crates/web/src/handlers/: ai.rs  comms.rs  context.rs  dashboard.rs  flows.rs  frontend_plugins.rs  mod.rs  nodes.rs  settings.rs  versioning.rs  web_state.rs
crates/web/src/security/: audit_middleware.rs  config.rs  headers.rs  rate_limit.rs
docs/: SECURITY.md  WASM-PLUGIN-SYSTEM.md  book.toml  usage-guides.md
e2e/: package-lock.json  package.json  playwright.config.ts
node-plugins/rust-red-nodes-dummy/: Cargo.toml
node-plugins/rust-red-nodes-dummy/src/: lib.rs
plugins/examples/echo/: Cargo.toml
plugins/examples/echo/src/: lib.rs
poc/: flows_modbus_to_postgres.json  modbus_simulator.py  setup_postgres.sql
src/: app.rs  cliargs.rs  config.rs  consts.rs  defaults.rs  env.rs  main.rs  registry.rs  runner.rs
tests/: cluster_integration.rs
versions/: v_000001.json  v_000002.json  v_000003.json  v_000005.json  v_000006.json  v_000008.json  v_000009.json  v_000010.json  v_000011.json  v_000012.json  v_000014.json  v_000015.json  v_000016.json  v_000017.json  v_000018.json  v_000019.json  v_000020.json  v_000021.json  v_000022.json  v_000023.json  v_000024.json  v_000025.json  v_000026.json  v_000027.json  v_000028.json  v_000029.json  v_000030.json  v_000032.json  v_000033.json  v_000034.json  v_000035.json  v_000037.json  v_000038.json  v_000039.json  v_000040.json  v_000041.json  v_000042.json  v_000045.json  v_000046.json  v_000047.json  (+8 more)
(+262 files in other folders)
