[package]
name = "rust-red-web"
version = "0.1.99"
edition = "2024"

[dependencies]
inventory.workspace = true
axum.workspace = true
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
http = "1"

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true, features = ["rustls-tls-native-roots"] }
config = { workspace = true }
base64 = { workspace = true }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
password-hash = "0.5"
thiserror = { workspace = true }

rust-red-core = { path = "../core" }
rust-red-cluster = { path = "../cluster", optional = true }
opentelemetry = { workspace = true, optional = true }

[features]
otel = ["dep:opentelemetry", "rust-red-core/otel"]
auth = []
ai = ["rust-red-core/ai"]
cluster = ["dep:rust-red-cluster", "rust-red-cluster/cluster", "rust-red-core/cluster"]
