[package]
name = "rust-red-plugin-echo"
version = "0.1.0"
edition = "2021"
description = "Example echo plugin for Rust-Red WASM plugin system"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-red-wasm-sdk = { path = "../../../crates/wasm-sdk" }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
